--- a/frontend/src/styles/TechnicalPage.css
+++ b/frontend/src/styles/TechnicalPage.css
@@ -1,22 +1,28 @@
 .page-container {
-  height: 90vh;
-  width: 90vw;
-  max-width: 1200px;
+  height: 90%;
+  width: 90%;
   margin: auto;
-  border: 1px solid #ddd;
+  border: 0px ;
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-  overflow: hidden; /* Important for rounded corners on scrolling content */
+  overflow: hidden;
   position: relative;
   background-color: #c0c0c0;
   font-family: 'Fira Code', 'Dank Mono', 'Consolas', monospace;
   font-size: 16px;
   line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
+.question-box {
+  padding: 16px;
+  font-family: 'Inter', system-ui, 'Avenir', Helvetica, Arial, sans-serif;
+}
+/*Code Block*/
 .editor-container {
   height: 70vh;
   width: 90vw;
-  max-width: 1200px;
   margin: 0 auto;
   border: 0px;
   border-radius: 12px;
@@ -45,6 +51,30 @@
   background-color: transparent;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100%;
 }
-
+/* Split Screen */
+.main-split {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  background-color: #e9ecef;
+}
+.left-split {
+  min-width: 50px;
+  overflow: hidden;
+  padding: 8px;
+}
+.split-bar {
+  width: 5px;
+  cursor: col-resize;
+  background-color: #ced4da;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.right-split {
+  flex: 1;
+  min-width: 50px;
+  overflow: hidden;
+  padding: 8px;
+}
